Fixed scrollbar appearing when opening the stationoptions menu when there are no songs When creating a station it is automatically in likedstationids Added condition to add song / remove from likedsongs only when likebtn is pressed to like a song and not a station

--- a/src/assets/styles/cmps/StationOptions.css
+++ b/src/assets/styles/cmps/StationOptions.css
@@ -52,8 +52,7 @@
 .station-options__menu {
     position: absolute;
     top: calc(100% + 0.25rem);
-    right: 0;
-    transform: translateX(150px);
+    left: 0px;
 
     min-width: 180px;
 
